# GrillTheKebab

pa1/: Makefile  grill.cpp  kebab.cpp  kebab.h  linkedlist.cpp  main.cpp  pa1  partners.txt  readme.md
pa2/: CMakeLists.txt  arrayclass.cpp  containertests  containertests.cpp  interpreter.cpp  interpreterprivate.h  interpretertest  interpretertest.cpp  queue.cpp  queueprivate.h  readme.md  stack.cpp
pa2/__MACOSX/: ._pa2
pa2/__MACOSX/pa2/: ._arrayclass.cpp  ._interpretertest.cpp  ._queue.cpp  ._stack.cpp
